<resources>
    <string name="app_name">RemindMe</string>
    <string name="form_name">Name</string>
    <string name="form_mobile">Mobile No</string>
    <string name="form_email">Email-Id</string>
    <string name="form_address">Address</string>
    <string name="form_no">No</string>
    <string name="form_date_birth">Date Of Birth</string>
    <string name="form_start_date">Start Date</string>
    <string name="form_end_date">End Date</string>
    <string name="form_gender">Gender</string>
    <string name="form_install_month">Install Duration</string>
    <string name="form_remind_time">Time of Reminder </string>
    <string name="form_snooze_time">Interval of Snooze</string>
    <string name="form_remind_day">Remind Day</string>
    <string name="radiobutton_form_male">Male</string>
    <string name="radiobutton_form_female">Female</string>
    <string name="button_dropdown_submit">Submit</string>
    <string name="form_button_next">Next</string>
    <string name="button_submit">Submit</string>
    <string name="drop_button_new_category">Add New Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_add_button">Submit</string>
    <string name="form_description">Description</string>
    <string name="description_hint">Enter Extra Details</string>
    <string name="details_button_extra">Extra Details</string>
</resources>
