<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridlayout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_form_name"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/form_name"
            style="@style/BaseTheme"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/textview_form_mobile_no"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/form_mobile"
            style="@style/BaseTheme"/>

        <TextView
            android:id="@+id/textview_form_email"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/form_email"
            style="@style/BaseTheme"/>

        <TextView
            android:id="@+id/textview_form_address"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/form_address"
            android:textAlignment="viewStart"
            style="@style/BaseTheme"/>

        <TextView
            android:id="@+id/textview_form_date_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/form_date_birth"
            android:textAlignment="center"
            style="@style/BaseTheme"/>

        <TextView
            android:id="@+id/textview_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/form_gender"
            style="@style/BaseTheme"/>

        <EditText
            android:id="@+id/edittext_form_name"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/BaseTheme"
            android:layout_width="200dp" />

        <EditText
            android:id="@+id/edittext_form_mobile_no"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:inputType="number"
            style="@style/BaseTheme"
            android:layout_width="200dp" />

        <EditText
            android:id="@+id/edittext_form_email"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/BaseTheme"
            android:layout_width="200dp" />

        <EditText
            android:id="@+id/edittext_form_address"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            style="@style/BaseTheme"
            android:layout_width="200dp" />

        <EditText
            android:id="@+id/edittext_form_date_birth"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:enabled="false"
            style="@style/BaseTheme"
            android:layout_width="200dp" />

        <ImageView
            android:id="@+id/imageview_form_birth_date"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_marginLeft="160dp"
            android:layout_row="4"
            android:src="@drawable/calender"
            style="@style/BaseTheme"/>

        <RadioGroup
            android:id="@+id/radiogroup_form"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >

            <RadioButton
                android:id="@+id/radiobutton_form_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_form_male"
                android:textSize="18sp"
                />

            <RadioButton
                android:id="@+id/radiobutton_form_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/radiobutton_form_female"
               />
        </RadioGroup>


        <Button
            android:id="@+id/button_form_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:text="@string/form_button_next"
            style="@style/BaseTheme"
             />

    </GridLayout>
</ScrollView>

