<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/textview_form_start_date"
            style="@style/BaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/form_start_date" />

        <TextView
            android:id="@+id/textview_form_end_date"
            style="@style/BaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/form_end_date" />

        <TextView
            android:id="@+id/textview_form_install_month"
            style="@style/BaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/form_install_month" />

        <TextView
            android:id="@+id/textview_form_remind_time"
            style="@style/BaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:paddingBottom="10dp"
            android:text="@string/form_remind_time" />

        <TextView
            android:id="@+id/textview_form_snooze_time"
            style="@style/BaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/form_snooze_time" />

        <TextView
            android:id="@+id/textview_form_remind_day"
            style="@style/BaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:paddingBottom="10dp"
            android:text="@string/form_remind_day" />

        <TextView
            android:id="@+id/textview_form_description"
            style="@style/BaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/form_description" />

        <ImageView
            android:id="@+id/imageview_form_remind_time"
            style="@style/BaseTheme"
            android:layout_width="45dp"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_marginLeft="5dp"
           android:src="@drawable/clock"
            android:layout_height="45dp" />

        <Spinner
            android:id="@+id/spinner_form_remind_day"
            style="@style/BaseTheme"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_column="1"
            android:layout_row="5"

             />

        <Button
            android:id="@+id/button_submit"
            style="@style/BaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="30dp"
            android:layout_row="7"
            android:text="@string/button_submit" />

        <Spinner
            android:id="@+id/spinner_form_install_month"
            style="@style/BaseTheme"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_width="200dp" />

        <Spinner
            android:id="@+id/spinner_form_snooze_time"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_width="200dp"
            style="@style/BaseTheme"/>

        <EditText
            android:id="@+id/edittext_form_start_date"
            style="@style/BaseTheme"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:visibility="gone"
            android:layout_marginLeft="45dp"
            android:layout_width="150dp" />

        <EditText
            android:id="@+id/edittext_form_remind_time"
            style="@style/BaseTheme"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:visibility="gone"
            android:layout_marginLeft="45dp"
            android:layout_width="150dp" />

        <EditText
            android:id="@+id/edittext_form_end_date"
            style="@style/BaseTheme"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:visibility="gone"
            android:layout_marginLeft="45dp"
            android:layout_width="150dp" />

        <EditText
            android:id="@+id/edttext_form_description"
            style="@style/BaseTheme"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:hint="@string/description_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="200"
            android:maxLines="5"
            android:layout_width="200dp" />

        <ImageView
            android:id="@+id/imageview_form_end_date"
            style="@style/BaseTheme"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:layout_row="1"
            android:src="@drawable/calender" />

        <ImageView
            android:id="@+id/imageview_form_start_date"
            style="@style/BaseTheme"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:layout_row="0"
            android:src="@drawable/calender" />

    </GridLayout>
</ScrollView>
